ready camp privacy policy

--- a/ready-camp/index.html
+++ b/ready-camp/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="../main.css">
-    <title>QuagSoft - Ready Camp</title>
+    <title>QuagSoft | Ready Camp</title>
 </head>
 <body>
     <div id="header">
@@ -28,7 +28,7 @@
     </div>
     <div>
         <h3>Privacy</h3>
-        <p>Please review the privacy policy <a href="/ready-camp/privacy.html">here</a>.</p>
+        <p>Please review the privacy policy <a href="privacy.html">here</a>.</p>
     </div>
     <div id="footer">
         <hr/>
