--- a/ready-camp/privacy.html
+++ b/ready-camp/privacy.html
@@ -30,7 +30,7 @@
     <h3>Your Consent</h3>
     By using the application you consent to this privacy policy.
     <h3>Contacting Me</h3>
-    For questions regarding this policy or any other inquires about the application please email <a href="mailto:readycamp@quagsoft.com">readycamp@quagsoft.com</a>.
+    For questions regarding this policy or any other inquires about the application please email <a href="mailto:admin@quagsoft.com">admin@quagsoft.com</a>.
     <h3>Changes to This Policy</h3>
     <p>Any changes to this policy will be posted here.</p>
     <p>Current summary of changes:</p>
